--- a/src/templates/auth/changepassword.html
+++ b/src/templates/auth/changepassword.html
@@ -6,24 +6,36 @@
 {% block main %}
 <h1>Change Password</h1>
 <form method="post">
-    <input class="mb-3 form-control"
-           name="password"
-           placeholder="Current Password"
-           type="password"
-           autocomplete="current-password"
-           required>
-    <input class="mb-3 form-control"
-           name="newPassword"
-           placeholder="New Password"
-           type="password"
-           autocomplete="new-password"
-           required>
-    <input class="mb-3 form-control"
-           name="confirmation"
-           placeholder="Confirmation"
-           type="password"
-           autocomplete="new-password"
-           required>
+    <div class="form-floating">
+        <input class="mb-3 form-control"
+               name="password"
+               id="password"
+               placeholder="Current Password"
+               type="password"
+               autocomplete="current-password"
+               required>
+        <label for="password">Current Password</label>
+    </div>
+    <div class="form-floating">
+        <input class="mb-3 form-control"
+               name="newPassword"
+               id="newPassword"
+               placeholder="New Password"
+               type="password"
+               autocomplete="new-password"
+               required>
+        <label for="newPassword">New Password</label>
+    </div>
+    <div class="form-floating">
+        <input class="mb-3 form-control"
+               name="confirmation"
+               id="confirmation"
+               placeholder="Confirmation"
+               type="password"
+               autocomplete="new-password"
+               required>
+        <label for="confirmation">Confirmation</label>
+    </div>
     <button class="btn btn-primary" type="submit">Change Password</button>
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 </form>
