--- a/src/templates/auth/resetpassword.html
+++ b/src/templates/auth/resetpassword.html
@@ -5,20 +5,26 @@
 {% block main %}
 <h1 class="text-center">Reset Password</h1>
 <form method="post">
-    <input class="form-control mb-3"
-           name="password"
-           id="password"
-           placeholder="Password"
-           type="password"
+    <div class="form-floating">
+        <input class="form-control mb-3"
+               name="password"
+               id="password"
+               placeholder="Password"
+               type="password"
            autocomplete="new-password"
            required>
-    <input class="form-control mb-3"
-           name="confirmation"
-           id="confirmation"
-           placeholder="Confirmation"
-           type="password"
+        <label for="password">Password</label>
+    </div>
+    <div class="form-floating">
+        <input class="form-control mb-3"
+               name="confirmation"
+               id="confirmation"
+               placeholder="Confirmation"
+               type="password"
            autocomplete="new-password"
            required>
+        <label for="confirmation">Confirmation</label>
+    </div>
     <button class="btn btn-primary" type="submit">Reset Password</button>
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 </form>
