--- a/src/templates/auth/forgotpassword.html
+++ b/src/templates/auth/forgotpassword.html
@@ -6,7 +6,10 @@
 <h1 class="text-center">Forgot Password</h1>
 <form method="post">
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-    <input class="form-control mb-3" name="email" placeholder="Email Address" type="text" required>
+    <div class="form-floating">
+        <input class="form-control mb-3" name="email" id="email" placeholder="Email Address" type="text" required>
+        <label for="email">Email Address</label>
+    </div>
     <button class="btn btn-primary" type="submit">Reset Password</button>
     {% if USE_CAPTCHA %}
         <script src="https://hcaptcha.com/1/api.js" async defer></script>
