--- a/src/templates/auth/register.html
+++ b/src/templates/auth/register.html
@@ -7,30 +7,44 @@
 <h1 class="text-center">Register</h1>
 <form method="post">
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-    <input autocomplete="off"
-           autofocus class="form-control mb-3"
-           name="username"
-           placeholder="Username"
-           required>
-    <input class="form-control mb-3"
-           name="email"
-           placeholder="Email Address"
-           type="email"
-           required>
-    <input class="form-control mb-3"
-           name="password"
-           id="password"
-           placeholder="Password"
-           type="password"
+    <div class="form-floating">
+        <input autocomplete="off"
+               autofocus class="form-control mb-3"
+               name="username"
+               id="username"
+               placeholder="Username"
+               required>
+        <label for="username">Username</label>
+    </div>
+    <div class="form-floating">
+        <input class="form-control mb-3"
+               name="email"
+               id="email"
+               placeholder="Email Address"
+               type="email"
+               required>
+        <label for="email">Email</label>
+    </div>
+    <div class="form-floating">
+        <input class="form-control mb-3"
+               name="password"
+               id="password"
+               placeholder="Password"
+               type="password"
            autocomplete="new-password"
            required>
-    <input class="form-control mb-3"
-           name="confirmation"
-           id="confirmation"
-           placeholder="Confirmation"
-           type="password"
+        <label for="password">Password</label>
+    </div>
+    <div class="form-floating">
+        <input class="form-control mb-3"
+               name="confirmation"
+               id="confirmation"
+               placeholder="Confirmation"
+               type="password"
            autocomplete="new-password"
            required>
+        <label for="confirmation">Confirmation</label>
+    </div>
     <button class="btn btn-primary" type="submit">Register</button>
     {% if USE_CAPTCHA %}
         <script src="https://hcaptcha.com/1/api.js" async defer></script>
