--- a/src/templates/email/reset_password.html
+++ b/src/templates/email/reset_password.html
@@ -92,11 +92,11 @@ body {
     <body>
         <main class="container">
             <div class="card post-card">
-                <h1>CTFOJ Password Reset</h1>
+                <h1>{{ CLUB_NAME }} Password Reset</h1>
                 <pre>
 Dear {{ username }},
 
-If you have recently tried to reset your CTFOJ password, click on the following link to reset it:
+If you have recently tried to reset your {{ CLUB_NAME }} password, click on the following link to reset it:
 
 {{ url_for('reset_password_user', token=token, _external=True) }}
 
