--- a/src/templates/email/confirm_login.html
+++ b/src/templates/email/confirm_login.html
@@ -92,11 +92,11 @@ body {
     <body>
         <main class="container">
             <div class="card post-card">
-                <h1>CTFOJ Login Confirmation</h1>
+                <h1>{{ CLUB_NAME }} Login Confirmation</h1>
                 <pre>
 Dear {{ username }},
 
-If you have recently tried to login to your CTFOJ account, click on the following link to confirm your login:
+If you have recently tried to login to your {{ CLUB_NAME }} account, click on the following link to confirm your login:
 
 {{ url_for('confirm_login', token=token, _external=True) }}
 
