--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -102,7 +102,7 @@
     right: 4px;
 }
 
-/****************** ADMIN PAGE LAYOUT **********************/
+/****************** ADMIN PAGE LAYOUT ************************/
 .admin-card {
     padding: calc(var(--bs-gutter-x)/ 2);
 }
@@ -121,6 +121,16 @@
 
 .user-admin {
     font-weight: bold;
+}
+
+/****************** OTHER PAGES ******************************/
+.profileDiv {
+    border-style: solid;
+    border-width: thin;
+    padding: 30px;
+    border-radius: 5px;
+    border-color: lightgray;
+    overflow-wrap: break-word;
 }
 
 /****************** MD LIVE PREVIEW **************************/
