Update templates [skip ci]

--- a/src/templates/auth/forgotpassword.html
+++ b/src/templates/auth/forgotpassword.html
@@ -7,7 +7,12 @@
 <form method="post">
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
     <div class="form-floating">
-        <input class="form-control mb-3" name="email" id="email" placeholder="Email Address" type="text" required>
+        <input class="form-control mb-3"
+               name="email"
+               id="email"
+               placeholder="Email Address"
+               type="text"
+               required>
         <label for="email">Email Address</label>
     </div>
     <button class="btn btn-primary" type="submit">Reset Password</button>
