--- a/src/templates/contest/create.html
+++ b/src/templates/contest/create.html
@@ -7,11 +7,19 @@
 <h1>Create Contest</h1>
 <form autocomplete="off" method="post">
     <div class="form-floating">
-        <input class="form-control mb-3" name="contest_id" id="id" placeholder="Contest ID" required>
+        <input class="form-control mb-3"
+               name="contest_id"
+               id="id"
+               placeholder="Contest ID"
+               required>
         <label for="id">Contest ID</label>
     </div>
     <div class="form-floating">
-        <input class="form-control mb-3" name="contest_name" id="name" placeholder="Contest Name" required>
+        <input class="form-control mb-3"
+        name="contest_name"
+        id="name"
+        placeholder="Contest Name"
+        required>
         <label for="name">Contest Name</label>
     </div>
     <div style="display: flex;">
