--- a/src/templates/ranking.html
+++ b/src/templates/ranking.html
@@ -4,7 +4,7 @@
 {% block active %}Ranking{% endblock %}
 
 {% block main %}
-<h1>Ranking</h1>
+<h1>Rankings</h1>
 <div style="overflow-x: auto;">
     <table class="table table-hover table-full-width">
         <thead class="table-dark">
