--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -29,7 +29,7 @@
                             <li><a class="nav-link" href="/">Home</a></li>
                             <li><a class="nav-link" href="/problems">Practice</a></li>
                             <li><a class="nav-link" href="/contests">Contests</a></li>
-                            <li><a class="nav-link" href="/ranking">Ranking</a></li>
+                            <li><a class="nav-link" href="/ranking">Rankings</a></li>
                             {% if session.admin %}
                                 <li><a class="nav-link" href="/admin/console">Admin Console</a></li>
                             {% endif %}
