--- a/src/templates/auth/register.html
+++ b/src/templates/auth/register.html
@@ -57,7 +57,8 @@
     Your username can only contain alphanumeric characters, dashes, and underscores.
     Your password must be at least 8 characters long. Although they are stored with industry-grade
     encryption and nobody can see them even if they gain access to the users database, we strongly
-    recommend you not to use a password you use elsewhere.<br><br>
+    recommend you not to use a password you use elsewhere.
+    Your email will be formatted so that it is entirely lowercase.<br><br>
     You must provide a valid email account to register on our site. By registering, you acknowledge
     that you have read our <a href="/privacy">privacy policy</a> and agree to abide by our
     <a href="/terms">terms of service</a>.
