Add instanced flag

--- a/src/templates/contest/create_problem.html
+++ b/src/templates/contest/create_problem.html
@@ -102,6 +102,14 @@
         </div>
         <input class="form-control" name="flag-hint" placeholder="Flag Hint" readonly>
     </div>
+    <div class="mb-3 toggle-input">
+        Requires Instancing? (you must create an entry in CTFOJ-Instancer matching this problem)
+        <div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" name="instanced">
+            </div>
+        </div>
+    </div>
     <input class="form-control mb-3" type="file" id="file" name="file" accept=".zip">
     <div class="form-control mb-3" style="border: 0;">
         <input type="checkbox" id="draft" name="draft">
