--- a/src/templates/problem/edit_problem.html
+++ b/src/templates/problem/edit_problem.html
@@ -65,6 +65,14 @@
         </div>
         <input class="form-control" name="flag-hint" placeholder="Flag Hint" readonly>
     </div>
+    <div class="mb-3 toggle-input">
+        Requires Instancing? (you must create an entry in CTFOJ-Instancer matching this problem)
+        <div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" name="instanced" {{ 'checked' if data['instanced'] }}>
+            </div>
+        </div>
+    </div>
     <div class="form-floating">
         <input class="form-control mb-3"
                type="number"
