--- a/src/templates/contest/create_problem.html
+++ b/src/templates/contest/create_problem.html
@@ -102,13 +102,9 @@
         </div>
         <input class="form-control" name="flag-hint" placeholder="Flag Hint" readonly>
     </div>
-    <div class="mb-3 toggle-input">
-        Requires Instancing? (you must create an entry in CTFOJ-Instancer matching this problem)
-        <div>
-            <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" name="instanced">
-            </div>
-        </div>
+    <div class="form-control mb-3" style="border: 0;">
+        Requires Instancing? You must create an entry in CTFOJ-Instancer with this this key: "<span id="instancedkey"></span>"
+        <input type="checkbox" name="instanced">
     </div>
     <input class="form-control mb-3" type="file" id="file" name="file" accept=".zip">
     <div class="form-control mb-3" style="border: 0;">
@@ -138,6 +134,14 @@
         updateFlagHint();
     });
     document.querySelector("input[name=flag]").addEventListener("input", updateFlagHint);
+
+    function instancedKey(e) {
+        const output = document.getElementById("instancedkey");
+        const contestId = location.pathname.split("/")[2];
+        output.innerText = contestId + "/" + e.target.value;
+    }
+    document.querySelector("input[name=id]").addEventListener("input", instancedKey);
+    instancedKey({target: document.querySelector("input[name=id]")});
 
     document.getElementById("description-out").attachShadow({mode: "open"});
     document.getElementById("hints-out").attachShadow({mode: "open"});
